--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
        
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+                I was born and raised in Canton, Ohio, but I've spent the last 7 years near Cleveland. I love living just close enough to the city while also enjoying the peace and quiet of the suburbs.
             </div>
             <div class="div-2">
-                Div 2
+                My passion: I LOVE music - it's one of the most powerful and diverse methids for expression & communication. In thr meantime, I get my fix by going to lots & lots of concerts. I'm at 160 and counting!
             </div>
             <div class="div-3">
-                Div 3
+                A fun fact: As a true New Yorker, I'm slightly embarassed to say that I only learned how to ride a plain ol' stationary bike 1 year ago, and have yet to learn to drive. But, the real takeaway isn that I'm learning!
             </div>
         </section>    
 
